--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MMM-OneDrive",
-  "version": "2.1.3",
+  "version": "1.0.0",
   "description": "MagicMirror module for OneDrive",
   "license": "MIT",
   "author": "hermanho",
@@ -17,7 +17,7 @@
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "heic-convert": "^2.1.0",
     "mkdirp": "^2.1.3",
-    "open": "^8.4.0"
+    "moment": "^2.29.4"
   },
   "devDependencies": {
     "@microsoft/microsoft-graph-types": "^2.40.0",
@@ -26,7 +26,9 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-jsdoc": "^46.4.4",
-    "eslint-plugin-prettier": "^5.0.0",
-    "moment": "^2.29.4"
+    "eslint-plugin-prettier": "^5.0.0"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
