--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "hermanho",
   "scripts": {
     "install-prod": "npm install --no-audit --no-fund --no-update-notifier --only=prod --omit=dev",
-    "lint:js": "eslint **/*.js --config .eslintrc.json --fix"
+    "lint:js": "eslint --config .eslintrc.json --fix  **/*.js *.js"
   },
   "repository": {
     "type": "git",
@@ -22,11 +22,9 @@
   "devDependencies": {
     "@microsoft/microsoft-graph-types": "^2.40.0",
     "electron-rebuild": "^3.2.9",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-jest": "^27.2.3",
-    "eslint-plugin-jsdoc": "^46.4.4",
-    "eslint-plugin-prettier": "^5.0.0"
+    "eslint-plugin-jsdoc": "^48.0.0"
   },
   "engines": {
     "node": ">=18"
