Fix name (has to be lower case)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MMM-OneDrive",
+  "name": "mmm-onedrive",
   "version": "1.0.0",
   "description": "MagicMirror module for OneDrive",
   "license": "MIT",
