--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "type": "git",
     "url": "https://github.com/hermanho/MMM-OneDrive"
   },
+  "keywords": [
+    "MagicMirror",
+    "OneDrive"
+  ],
   "dependencies": {
     "@azure/msal-node": "^2.6.1",
     "@microsoft/microsoft-graph-client": "^3.0.7",
