--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mmm-onedrive",
   "version": "1.0.0",
-  "description": "MagicMirror module for OneDrive",
+  "description": "MagicMirror² module to display your photos from OneDrive.",
   "license": "MIT",
   "author": "hermanho",
   "scripts": {
