--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mmm-onedrive",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "MagicMirror² module to display your photos from OneDrive.",
   "license": "MIT",
   "author": "hermanho",
@@ -20,21 +20,21 @@
     "OneDrive"
   ],
   "dependencies": {
-    "@azure/msal-node": "^2.13.0",
+    "@azure/msal-node": "^2.16.2",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "heic-convert": "^2.1.0",
-    "immutable": "^5.0.0-beta.5",
+    "immutable": "^5.0.3",
     "moment": "^2.30.1",
     "re2-wasm": "^1.0.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.9.0",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.16.0",
     "@microsoft/microsoft-graph-types": "^2.40.0",
     "@types/magicmirror-module": "^2.16.5",
-    "eslint": "^9.9.0",
-    "eslint-plugin-jsdoc": "^50.2.2",
-    "globals": "^15.9.0"
+    "eslint": "^9.16.0",
+    "eslint-plugin-jsdoc": "^50.6.0",
+    "globals": "^15.13.0"
   },
   "engines": {
     "node": ">=18"
