--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "MagicMirror² module to display your photos from OneDrive.",
   "license": "MIT",
   "author": "hermanho",
+  "main": "MMM-OneDrive.js",
   "contributors": [
     "https://github.com/hermanho/MMM-OneDrive/graphs/contributors"
   ],
   "scripts": {
+    "build": "rollup -c --bundleConfigAsCjs",
     "install-prod": "npm install --no-audit --no-fund --no-update-notifier --only=prod --omit=dev",
-    "lint:js": "eslint . --fix"
+    "lint": "eslint . --fix && prettier --check ."
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/hermanho/MMM-OneDrive"
+  },
+  "bugs": {
+    "url": "https://github.com/hermanho/MMM-OneDrive/issues"
   },
   "keywords": [
     "MagicMirror",
@@ -28,12 +33,22 @@
     "re2-wasm": "^1.0.2"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.16.0",
     "@microsoft/microsoft-graph-types": "^2.40.0",
     "@types/magicmirror-module": "^2.16.5",
-    "eslint": "^9.16.0",
+    "eslint": "^9.28.0",
     "eslint-plugin-jsdoc": "^50.6.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.1",
+    "prettier": "^3.2.4",
+    "rollup": "^4.41.2",
+    "rollup-plugin-banner2": "^1.3.1",
+    "typescript": "^5.3.3",
     "globals": "^15.13.0"
   },
   "engines": {
