--- a/package.json
+++ b/package.json
@@ -27,29 +27,31 @@
   "dependencies": {
     "@azure/msal-node": "^2.16.2",
     "@microsoft/microsoft-graph-client": "^3.0.7",
+    "exifreader": "^4.31.0",
     "heic-convert": "^2.1.0",
     "immutable": "^5.0.3",
     "moment": "^2.30.1",
     "re2-wasm": "^1.0.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.16.0",
+    "@microsoft/microsoft-graph-types": "^2.40.0",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.16.0",
-    "@microsoft/microsoft-graph-types": "^2.40.0",
     "@types/magicmirror-module": "^2.16.5",
     "eslint": "^9.28.0",
-    "eslint-plugin-jsdoc": "^50.6.0",
     "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-jsdoc": "^50.6.0",
     "eslint-plugin-prettier": "^5.4.1",
+    "globals": "^15.13.0",
     "prettier": "^3.2.4",
     "rollup": "^4.41.2",
     "rollup-plugin-banner2": "^1.3.1",
     "typescript": "^5.3.3",
-    "globals": "^15.13.0"
+    "typescript-eslint": "^8.33.1"
   },
   "engines": {
     "node": ">=18"
