--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "@eslint/js": "^9.16.0",
     "@jest/globals": "^29.0.0",
     "@microsoft/microsoft-graph-types": "^2.40.0",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.6",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@stylistic/eslint-plugin": "^4.4.1",
     "@types/magicmirror-module": "^2.16.5",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
@@ -51,7 +52,7 @@
     "globals": "^15.13.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.4",
-    "rollup": "^4.41.2",
+    "rollup": "^4.42.0",
     "rollup-plugin-banner2": "^1.3.1",
     "ts-jest": "^29.3.4",
     "typescript": "^5.3.3",
