--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "build": "rollup -c --bundleConfigAsCjs",
     "install-prod": "npm install --no-audit --no-fund --no-update-notifier --only=prod --omit=dev",
-    "lint": "eslint . --fix && prettier --check ."
+    "lint": "eslint . --fix && prettier --check .",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.16.0",
+    "@jest/globals": "^29.0.0",
     "@microsoft/microsoft-graph-types": "^2.40.0",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
@@ -47,9 +49,11 @@
     "eslint-plugin-jsdoc": "^50.6.0",
     "eslint-plugin-prettier": "^5.4.1",
     "globals": "^15.13.0",
+    "jest": "^29.7.0",
     "prettier": "^3.2.4",
     "rollup": "^4.41.2",
     "rollup-plugin-banner2": "^1.3.1",
+    "ts-jest": "^29.3.4",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.33.1"
   },
