--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "exifreader": "^4.31.0",
     "heic-convert": "^2.1.0",
     "immutable": "^5.0.3",
+    "jpeg-js": "^0.4.4",
+    "libheif-js": "^1.19.8",
     "moment": "^2.30.1",
     "re2-wasm": "^1.0.2"
   },
@@ -60,10 +62,5 @@
   },
   "engines": {
     "node": ">=18"
-  },
-  "overrides": {
-    "heic-decode": {
-      "libheif-js": "^1.18.2"
-    }
   }
 }
