--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "jpeg-js": "^0.4.4",
     "libheif-js": "^1.19.8",
     "moment": "^2.30.1",
-    "re2-wasm": "^1.0.2"
+    "re2-wasm": "^1.0.2",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
