--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mmm-onedrive",
-  "version": "1.6.0",
+  "version": "1.7.0",
   "description": "MagicMirror² module to display your photos from OneDrive.",
   "license": "MIT",
   "author": "hermanho",
@@ -26,19 +26,19 @@
     "OneDrive"
   ],
   "dependencies": {
-    "@azure/msal-node": "^2.16.2",
+    "@azure/msal-node": "^3.8.0",
     "@jimp/core": "^1.6.0",
     "@jimp/js-bmp": "^1.6.0",
     "@jimp/js-jpeg": "^1.6.0",
     "@jimp/plugin-resize": "^1.6.0",
     "@microsoft/microsoft-graph-client": "^3.0.7",
-    "exifreader": "^4.31.0",
+    "exifreader": "^4.32.0",
     "heic-convert": "^2.1.0",
     "image-type": "^6.0.0",
     "libheif-js": "^1.19.8",
     "moment": "^2.30.1",
     "re2-wasm": "^1.0.2",
-    "sharp": "^0.34.3"
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
@@ -46,28 +46,29 @@
     "@babel/preset-typescript": "^7.27.1",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.16.0",
-    "@jest/globals": "^29.0.0",
-    "@microsoft/microsoft-graph-types": "^2.40.0",
-    "@rollup/plugin-commonjs": "^28.0.3",
+    "@jest/globals": "^30.2.0",
+    "@microsoft/microsoft-graph-types": "^2.43.0",
+    "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-strip": "^3.0.4",
     "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^12.1.2",
-    "@stylistic/eslint-plugin": "^4.4.1",
+    "@rollup/plugin-typescript": "^12.1.4",
+    "@stylistic/eslint-plugin": "^5.4.0",
     "@types/magicmirror-module": "^2.16.6",
-    "eslint": "^9.28.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-jsdoc": "^50.6.0",
-    "eslint-plugin-prettier": "^5.4.1",
-    "globals": "^15.13.0",
+    "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-jsdoc": "^60.7.1",
+    "eslint-plugin-tsdoc": "^0.4.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.4.0",
     "jest": "^29.7.0",
-    "prettier": "^3.2.4",
+    "prettier": "^3.6.2",
     "rollup": "^4.42.0",
     "rollup-plugin-banner2": "^1.3.1",
     "rollup-plugin-dts": "^6.2.1",
-    "ts-jest": "^29.3.4",
-    "typescript": "^5.3.3",
-    "typescript-eslint": "^8.33.1"
+    "ts-jest": "^29.4.4",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.45.0"
   },
   "engines": {
     "node": ">=18"
